--- a/Views/Shared/_mainLayout.cshtml
+++ b/Views/Shared/_mainLayout.cshtml
@@ -332,10 +332,17 @@
                                 @*     <i class="fas fa-cogs fa-sm fa-fw mr-2 text-gray-400"></i> *@
                                 @*     Settings *@
                                 @* </a> *@
-                                <a class="dropdown-item" href="#">
-                                    <i class="fas fa-list fa-sm fa-fw mr-2 text-gray-400"></i>
-                                    Activity Log
-                                </a>
+                                @{
+                                    var role = Context.Session.GetInt32("UserRoleId");
+                                }
+
+                                @if (role == 1) // 👈 Specific SuperAdmin only
+                                {
+                                    <a class="dropdown-item" href="/Activitylog">
+                                        <i class="fas fa-list fa-sm fa-fw mr-2 text-gray-400"></i>
+                                        Activity Log
+                                    </a>
+                                }
                                 <div class="dropdown-divider"></div>
                                 <a class="dropdown-item" href="#" data-toggle="modal" data-target="#logoutModal">
                                     <i class="fas fa-sign-out-alt fa-sm fa-fw mr-2 text-gray-400"></i>
