--- a/Views/AdminMaster/AddAdmin.cshtml
+++ b/Views/AdminMaster/AddAdmin.cshtml
@@ -6,6 +6,7 @@
 <link href="~/assets/vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
 <link href="~/assets/css/sb-admin-2.min.css" rel="stylesheet">
 
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 <div class="container">
     <div class="card o-hidden border-0 shadow-lg my-5">
         <div class="card-body p-0">
@@ -125,6 +126,9 @@
 </div>
 
 @section Scripts {
+    <!-- Bootstrap JS (required for toast dismissal) -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+
 
     <script src="~/libraryjs/AddAdmin.js"></script>
 
