--- a/Views/AdminMaster/PendingMemberships.cshtml
+++ b/Views/AdminMaster/PendingMemberships.cshtml
@@ -3,6 +3,9 @@
     Layout = "/Views/Shared/_mainLayout.cshtml";
     ViewData["Title"] = "Pending MemberShip-List";
 }
+
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+
 <div id="wrapper">
     <!-- Content Wrapper -->
     <div id="content-wrapper" class="d-flex flex-column">
@@ -59,6 +62,9 @@
     @{
         await Html.RenderPartialAsync("_ValidationScriptsPartial");
     }
+    <!-- Bootstrap JS (required for toast dismissal) -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+
     <script src="~/memberportal/approvereject.js"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 
