--- a/Views/BookMaster/booklist.cshtml
+++ b/Views/BookMaster/booklist.cshtml
@@ -39,12 +39,16 @@
                             <td>@book.PublicationYear</td>
                             <td>@book.Genre.GenreName</td>
                             <td>
+
                                 <a class="btn btn-info" href="@Url.Action("Details", "BookMaster", new { id = book.BookId })">
                                     <i class="fas fa-eye"></i>
                                 </a>
-                                <a class="btn btn-primary" href="@Url.Action("Addbook", "BookMaster", new { id = book.BookId })">
-                                    <i class="fas fa-edit"></i>
-                                </a>
+                                @if (ViewBag.PermissionType != "canView")
+                                {
+                                    <a class="btn btn-primary" href="@Url.Action("Addbook", "BookMaster", new { id = book.BookId })">
+                                        <i class="fas fa-edit"></i>
+                                    </a>
+                                }
                                 <button class="btn btn-danger delete-btn" data-id="@book.BookId">
                                     <i class="fas fa-trash-alt"></i>
                                 </button>
@@ -60,6 +64,7 @@
 </div>
 
 @section Scripts {
+    @* <script src="~/libraryjs/Delete.js"></script> *@
     <script>
         $(document).ready(function () {
             console.log("Initializing DataTable...");
