--- a/Views/Membership/Joinlibrary.cshtml
+++ b/Views/Membership/Joinlibrary.cshtml
@@ -6,6 +6,8 @@
    
     ViewData["Title"] = "JoinLibrary";
 }
+<!-- Bootstrap CSS -->
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 <div id="wrapper">
     <!-- Content Wrapper -->
     <div id="content-wrapper" class="d-flex flex-column">
@@ -59,6 +61,12 @@
         await Html.RenderPartialAsync("_ValidationScriptsPartial");
     }
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    
+
+    <!-- Bootstrap JS (required for toast dismissal) -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+
+
     <script src="~/memberportal/joinlibrary.js"></script>
 
 }
